--- a/partier/testpartiet.html
+++ b/partier/testpartiet.html
@@ -18,7 +18,7 @@
     
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="../index.html" class="nav-link active" aria-current="page">Hjem</a></li>
-            <li class="nav-item"><a href="partier/partier.html" class="nav-link">Partier</a></li>
+            <li class="nav-item"><a href="partier.html" class="nav-link">Partier</a></li>
             <li class="nav-item"><a href="../about.html" class="nav-link">Om siden</a></li>
             <li class="nav-item"><a href="../faq.html" class="nav-link">FAQs</a></li>
           </ul>
